// Vitest Snapshot v1

exports[`Empty gets all > emptyGetsAll flag on 1`] = `
{
  "children": [],
  "operator": "$and",
}
`;

exports[`Logical parser > Implicit operations 1`] = `
{
  "children": [
    {
      "keyId": "title",
      "pattern": "old war",
    },
    {
      "children": [
        {
          "children": [
            {
              "keyId": "title",
              "pattern": "!arts",
            },
            {
              "keyId": "tags",
              "pattern": "kiro",
            },
          ],
          "operator": "$and",
        },
        {
          "keyId": "title",
          "pattern": "^lock",
        },
      ],
      "operator": "$or",
    },
  ],
  "operator": "$and",
}
`;

exports[`Logical parser > Tree structure 1`] = `
{
  "children": [
    {
      "keyId": "title",
      "pattern": "old war",
    },
    {
      "children": [
        {
          "keyId": "title",
          "pattern": "!arts",
        },
        {
          "keyId": "title",
          "pattern": "^lock",
        },
      ],
      "operator": "$or",
    },
  ],
  "operator": "$and",
}
`;
